# CalcAlgs_Mod_Grad

./: .gitignore  CMakeLists.txt  Mod lw2 2023-10-12 20-18.md  README.md
CalcAlgs/: CMakeLists.txt
CalcAlgs/lw1_NewtPoly/: CMakeLists.txt  mainwindow.ui
CalcAlgs/lw1_NewtPoly/lw1_lib/: CMakeLists.txt  main.cpp  newtpoly.cpp  newtpolyroots.cpp  sysequasroot.cpp
CalcAlgs/lw1_NewtPoly/lw1_lib/example/: main.cpp
CalcAlgs/lw1_NewtPoly/lw1_lib/inc/KPEq/: newtpoly.hpp  newtpolyroots.hpp  sysequasroot.hpp
CalcAlgs/lw1_NewtPoly/lw1_lib/modules/: CMakeLists.txt  newtpoly.hpp  newtpolyroots.hpp  sysequasroot.hpp
CalcAlgs/lw1_NewtPoly/lw1_libQt/Chart/: CMakeLists.txt  chart.cpp  chart.h
CalcAlgs/lw1_NewtPoly/lw1_libQt/MsgBoxSmpl/: CMakeLists.txt  msgboxsmpl.cpp
CalcAlgs/lw1_NewtPoly/lw1_newtpolyQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
CalcAlgs/lw1_NewtPoly/lw1_sysequaroot/: CMakeLists.txt  main.cpp  syseqrootform.cpp  syseqrootform.h  syseqrootform.ui
CalcAlgs/lw1_NewtPoly/lw1_tests/: CMakeLists.txt  newtpoly_tests.cpp  newtpolyroots_tests.cpp
KPEqLibs/: CMakeLists.txt  main.cpp
KPEqLibs/QtLibs/: CMakeLists.txt
KPEqLibs/QtLibs/Chart/: CMakeLists.txt  chart.cpp
KPEqLibs/QtLibs/MsgBoxSmpl/: CMakeLists.txt
KPEqLibs/QtLibs/MsgBoxSmpl/inc/KPEq/: msgboxsmpl.h
ModGrad/: CMakeLists.txt
ModGrad/lw1_ODE/: CMakeLists.txt
ModGrad/lw1_ODE/QtGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ModGrad/lw1_ODE/lib/: CMakeLists.txt  ODE.cpp  ODE_KPEq.cpp
ModGrad/lw1_ODE/lib/inc/: ODE_KPEq.h
ModGrad/lw1_ODE/lib/inc/KPEq/: ODE.hpp
ModGrad/lw1_ODE/lib_tests/: CMakeLists.txt  main.cpp
ModGrad/lw1_ODE/libsQt/Chart/: CMakeLists.txt
ModGrad/lw1_ODE/libsQt/Chart/inc/KPEq/: chart.h
ModGrad/lw1_ODE/libsQt/MsgBoxSmpl/: msgboxsmpl.cpp
ModGrad/lw2_ODE_RungeAll/: CMakeLists.txt  README.md  main.cpp
ModGrad/lw2_ODE_RungeAll/KPEq/: CMakeLists.txt  integral.cpp
ModGrad/lw2_ODE_RungeAll/KPEq/inc/KPEq/: integral.hpp  rungeode.hpp
ModGrad/lw2_ODE_RungeAll/lw2_mod_QtGUI/: CMakeLists.txt
ModGrad/lw2_ODE_RungeAll/mod_lw2_QtGUI/: CMakeLists.txt  lw2task.cpp  lw2task.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/: CMakeLists.txt  integral.cpp  rungeode.cpp
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/KPEq_Q_ItemModel/: CMakeLists.txt  itemmodel.cpp  itemmodel.h
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/KPEq_Q_ItemModel/KPEq_Q_ItemModel_example/: CMakeLists.txt  kpeq_q_itemmodel_example.cpp  kpeq_q_itemmodel_example.h  kpeq_q_itemmodel_example.ui  main.cpp
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/KPEq_Q_ItemModel/inc/KPEq_Q_Libs/: itemmodel.h
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/inc/KPEq/: integral.hpp  rungeode.hpp
ModGrad/lw2_ODE_RungeAll/mod_lw2_lib/tests_integral_kpeq/: CMakeLists.txt  tst_integralkpeqtests.cpp
QtLibs/Chart/: chart.cpp
QtLibs/MsgBoxSmpl/: CMakeLists.txt
